Closed
Bug 1085127
Opened 9 years ago
Closed 9 years ago
libcubeb: error when compiling with debug enabled (undeclared identifier "false") - include stdbool.h
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: fabian.raetz, Assigned: fabian.raetz)
Details
Attachments
(1 file)
641 bytes,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; OpenBSD amd64; rv:34.0) Gecko/20100101 Firefox/34.0 Build ID: 20141017124931 Steps to reproduce: compile browser component on OpenBSD with ac_add_options --enable-debug and/or ac_add_options --enable-profiling Actual results: 18:00.13 /home/mischi/projects/mozilla-central/media/libcubeb/src/cubeb_sndio.c:347:10: error: use of undeclared identifier 'false' 18:00.13 assert(false && "not implemented"); 18:00.13 ^ 18:00.13 /usr/include/assert.h:56:23: note: expanded from macro 'assert' 18:00.13 # define assert(e) ((e) ? (void)0 : __assert2(__FILE__, __LINE__, __func__, #e)) 18:00.13 ^ 18:00.13 1 error generated. 18:00.16 In the directory /usr/pobj/m-c/media/libcubeb/src 18:00.17 The following command failed to execute properly: 18:00.17 /usr/local/bin/ccache clang -o cubeb_sndio.o -c -I../../../dist/system_wrappers -include /home/mischi/projects/mozilla-central/config/gcc_hidden.h -DUSE_SNDIO -DMOZ_GLUE_IN_PROGRAM -DAB_CD=en-US -DNO_NSPR_10_SUPPORT -I/home/mischi/projects/mozilla-central/media/libcubeb/src -I. -I../../../dist/include -I/usr/local/include/nspr -I/usr/local/include/nss -I/usr/include -I/usr/X11R6/include/pixman-1 -fPIC -Qunused-arguments -I/usr/X11R6/include -include ../../../mozilla-config.h -DMOZILLA_CLIENT -MD -MP -MF .deps/cubeb_sndio.o.pp -Qunused-arguments -I/usr/X11R6/include -Qunused-arguments -Wall -Wdeclaration-after-statement -Wempty-body -Wpointer-to-int-cast -Wsign-compare -Wtype-limits -Werror=char-subscripts -Werror=comment -Werror=endif-labels -Werror=enum-compare -Werror=ignored-qualifiers -Werror=int-to-pointer-cast -Werror=multichar -Werror=nonnull -Werror=pointer-arith -Werror=pointer-sign -Werror=return-type -Werror=sequence-point -Werror=trigraphs -Werror=unknown-pragmas -Wno-unused -std=gnu99 -fgnu89-inline -fno-strict-aliasing -fno-math-errno -pthread -pipe -DDEBUG -DTRACING -g -fno-omit-frame-pointer /home/mischi/projects/mozilla-central/media/libcubeb/src/cubeb_sndio.c 18:00.17 /home/mischi/projects/mozilla-central/config/rules.mk:916: recipe for target 'cubeb_sndio.o' failed 18:00.17 gmake[5]: *** [cubeb_sndio.o] Error 1 18:00.17 /home/mischi/projects/mozilla-central/config/recurse.mk:74: recipe for target 'media/libcubeb/src/target' failed 18:00.17 gmake[4]: *** [media/libcubeb/src/target] Error 2 Expected results: Build should succeed without errors. Attached is a patch which includes stdbool.h so "false" is actually defined.
Comment 1•9 years ago
|
||
Comment on attachment 8507526 [details] [diff] [review] libcubeb-stdbool.patch Matthew, should this go through github PR first ?
Attachment #8507526 -
Flags: review?(kinetik)
Comment 2•9 years ago
|
||
Comment on attachment 8507526 [details] [diff] [review] libcubeb-stdbool.patch Review of attachment 8507526 [details] [diff] [review]: ----------------------------------------------------------------- We can check it in directly. It'll be synced back to the Github version when I resync trees in the future.
Attachment #8507526 -
Flags: review?(kinetik) → review+
Comment 3•9 years ago
|
||
Comment on attachment 8507526 [details] [diff] [review] libcubeb-stdbool.patch https://hg.mozilla.org/integration/mozilla-inbound/rev/a92bf7479a42 pushed - next time send an hg patch, i filled the user/commit message :)
Assignee | ||
Comment 4•9 years ago
|
||
i will. Thanks!
Comment 5•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/a92bf7479a42
Assignee: nobody → fabian.raetz
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Comment 6•9 years ago
|
||
Pushed upstream too. Thanks for the patch! https://github.com/kinetiknz/cubeb/commit/67ccd42501d3d6acb7ba7b9975dc6c720c79499a
You need to log in
before you can comment on or make changes to this bug.
Description
•