Bug 1085127 - cubeb_sndio.c: error when compiling with debug enabled (undeclared identifier "false") - include stdbool.h r=kinetik