media/libcubeb/src/cubeb_sndio.c
@@ -7,6 +7,7 @@
 #include <poll.h>
 #include <pthread.h>
 #include <sndio.h>
+#include <stdbool.h>
 #include <stdlib.h>
 #include <stdio.h>
 #include <assert.h>
